[gd_scene load_steps=7 format=2]

[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=1]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=2]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=3]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=4]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scripts/UI/FileDisplay.gd" type="Script" id=6]

[node name="FileDisplay" type="Node2D"]
z_index = 11
script = ExtResource( 6 )

[node name="MouseDisable" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -1024.0
margin_right = 1024.0
margin_bottom = 1024.0
rect_min_size = Vector2( 2048, 2048 )
color = Color( 0.313726, 0.0509804, 0.698039, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -150.0
margin_top = -50.0
margin_right = -14.0
margin_bottom = 3.0
texture = ExtResource( 4 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -6.0
margin_top = -6.0
margin_right = 6.0
margin_bottom = 6.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonHolder" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 48.0
margin_bottom = 50.0
custom_constants/separation = 8
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ScrollContainer/ButtonHolder"]
margin_right = 48.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="BackButton" type="Button" parent="ScrollContainer/ButtonHolder"]
margin_top = 27.0
margin_right = 48.0
margin_bottom = 50.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 1 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"

[connection signal="pressed" from="ScrollContainer/ButtonHolder/BackButton" to="." method="onFileLoadBackPressed"]
